fix: increase event list items spacing to remove date/location pairing ambiguity

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -240,7 +240,7 @@ nav {
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
 	padding-top: 2px;
-	padding-bottom: 2px;
+	padding-bottom: 8px;
 }
 
 
